--- a/frontend/website-responsi/src/App.css
+++ b/frontend/website-responsi/src/App.css
@@ -3,10 +3,10 @@
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  gap: 45px;
-  height: 950px;
+  gap: 35px;
+  height: 1024px;
   justify-content: center;
-  padding: 0px 139px 96px;
+  padding: 56px 139px 96px;
   position: relative;
 }
 
@@ -54,12 +54,14 @@
   align-items: flex-start;
   display: inline-flex;
   flex: 0 0 auto;
-  gap: 95px;
+  gap: 45px;
+  margin-left: -51.40px;
+  margin-right: -51.40px;
   position: relative;
 }
 
 .desktop .overlap-group-wrapper {
-  height: 80px;
+  height: 85.98px;
   position: relative;
   width: 87.98px;
 }
@@ -78,7 +80,7 @@
   font-size: 46.1px;
   font-weight: 700;
   height: 56px;
-  left: 29px;
+  left: 32px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -106,7 +108,7 @@
   font-size: 46.1px;
   font-weight: 700;
   height: 56px;
-  left: 29px;
+  left: 27px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -120,7 +122,7 @@
   font-size: 46.1px;
   font-weight: 700;
   height: 56px;
-  left: 29px;
+  left: 26px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -134,7 +136,7 @@
   font-size: 46.1px;
   font-weight: 700;
   height: 56px;
-  left: 29px;
+  left: 28px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -152,48 +154,6 @@
 .desktop .text-wrapper-7 {
   color: #000000;
   font-family: "Inter-Bold", Helvetica;
-  font-size: 46.1px;
-  font-weight: 700;
-  height: 56px;
-  left: 28px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 15px;
-}
-
-.desktop .text-wrapper-8 {
-  color: #000000;
-  font-family: "Inter-Bold", Helvetica;
-  font-size: 46.1px;
-  font-weight: 700;
-  height: 56px;
-  left: 28px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 15px;
-}
-
-.desktop .text-wrapper-9 {
-  color: #000000;
-  font-family: "Inter-Bold", Helvetica;
-  font-size: 46.1px;
-  font-weight: 700;
-  height: 56px;
-  left: 28px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 15px;
-}
-
-.desktop .text-urutan-menjawab {
-  color: #000000;
-  font-family: "Inter-Bold", Helvetica;
   font-size: 35.6px;
   font-weight: 700;
   letter-spacing: 0;
@@ -203,13 +163,12 @@
   width: fit-content;
 }
 
-
 .desktop .frame-2 {
   align-items: flex-start;
   display: inline-flex;
   flex: 0 0 auto;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   position: relative;
 }
 
@@ -217,7 +176,7 @@
   align-items: flex-start;
   display: inline-flex;
   flex: 0 0 auto;
-  gap: 25px;
+  gap: 19px;
   justify-content: center;
   position: relative;
 }
@@ -248,4 +207,19 @@
   position: relative;
   text-align: center;
   width: fit-content;
+}
+
+.desktop .button {
+  width: 120px;  /* Set the width */
+  height: 120px; /* Set the height to make it square */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10rem; /* Larger font size */
+}
+
+.desktop .text-wrapper {
+  font-family: 'Inter', Helvetica;
+  font-size: 2rem; /* Adjust font size */
+  font-weight: bold;
 }
