--- a/frontend/website-responsi/src/index.css
+++ b/frontend/website-responsi/src/index.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,11 +37,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 300;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -37,17 +50,13 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+p {
+  font-family: 'Inter-Bold', sans-serif;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 1.5;
 }
+
 button:hover {
   border-color: #646cff;
 }
