--- a/frontend/website-responsi/src/index.css
+++ b/frontend/website-responsi/src/index.css
@@ -36,6 +36,13 @@ a:hover {
   color: #535bf2;
 }
 
+button text-button {
+  font-family: 'Inter-Bold', sans-serif;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 1.5;
+}
+
 body {
   margin: 300;
   display: flex;
